Created service, controller, and repositories, trying to find out how it works

--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,10 @@
             <artifactId>spring-boot-starter-tomcat</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+        	<groupId>org.hibernate</groupId>
+        	<artifactId>hibernate-jpamodelgen</artifactId>
+        </dependency>
 	</dependencies>
 	
 	<build>
