--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,11 @@
         	<groupId>org.hibernate</groupId>
         	<artifactId>hibernate-jpamodelgen</artifactId>
         </dependency>
+        <dependency>
+        	<groupId>org.scala-lang</groupId>
+        	<artifactId>scala-library</artifactId>
+        	<version>2.10.4</version>
+        </dependency>
 	</dependencies>
 	
 	<build>
